skeleton should be done

--- a/index.html
+++ b/index.html
@@ -2,21 +2,30 @@
 <meta charset="utf-8">
 <title>FPS.js</title>
 <link rel="stylesheet" href="/media/css/styles.css" />
-<header>
+<link rel="stylesheet" href="http://yandex.st/highlightjs/6.1/styles/default.min.css" />
+<header class="centered">
+    <div>
     <h1><a href="/">Building a networked FPS in the browser</a></h1>
+    </div>
 </header>
-<div id="container">
+<div class="centered">
+    <div id="container">
     <a href="#plate">plate</a>
+    </div>
 </div>
-<footer>
-    <a href="http://github.com/chrisdickinson/" target="_blank">
-        <img src="https://secure.gravatar.com/avatar/f70956bdb907c2f8b39ff624ea925ccd?s=140" />
-    </a>
-    <p><em>Chris Dickinson</em> is a hacker living in Lawrence, KS.
-    <p>He enjoys drawing, coffee, Starcraft, and chatting about JavaScript.
-    <p>You can follow him <a href="http://twitter.com/isntitvacant/">on twitter</a> or
-       <a href="http://github.com/chrisdickinson/">on github</a>. He&rsquo;d very much appreciate
-       it!
+<footer class="centered">
+    <div>
+        <a href="http://github.com/chrisdickinson/" target="_blank">
+            <img src="https://secure.gravatar.com/avatar/f70956bdb907c2f8b39ff624ea925ccd?s=140" />
+        </a>
+        <aside>
+        <p><em>Chris Dickinson</em> is a hacker living in Lawrence, KS.
+        <p>He enjoys drawing, coffee, Starcraft, and chatting about JavaScript.
+        <p>You can follow him <a href="http://twitter.com/isntitvacant/">on twitter</a> or
+           <a href="http://github.com/chrisdickinson/">on github</a>. He&rsquo;d very much appreciate
+           it!
+        </aside>
+    </div>
 </footer>
 <script src="/media/js/showdown.js"></script>
 <script src="/media/js/highlight.js"></script>
