--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 </header>
 <div class="centered">
     <div id="container">
-    <a href="#plate">plate</a>
+        <p>
+            <em>
+                A diary of Chris&rsquo;s trials and tribulations as he builds
+                an in-browser, multiplayer first person shooter using only his
+                scrappy can-do attitude, rudimentary knowledge of the first year
+                of engineering calculus, and extensive googling. Thrill
+                as you watch him make blatantly false assertions; laugh as his
+                assertions come tumbling down in the face of reality; cry at the
+                sheer melodrama of his writing.
+            </em>
+        </p>
+        <h3><a href="#intro">Jump right in.</a></h3>
     </div>
 </div>
 <footer class="centered">
