rework some articles, add some articles.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 sheer melodrama of his writing.
             </em>
         </p>
-        <h3><a href="#intro">Jump right in.</a></h3>
+        <h3><a href="#intent">Jump right in.</a></h3>
     </div>
 </div>
 <footer class="centered">
